# semanticmap

./: .gitignore  CMakeLists.txt  package.xml  rviz_plugin_description.xml  setup.py
include/semanticmap/: semantic_map_grid.h
launch/: demo.launch
maps/: eng2-7f-0.05_semantics.xcf  eng2-7f-0.05_semantics.yaml
msg/: GridCell.msg  GridCellArray.msg  SemanticMapGrid.msg
node_scripts/: convert_semantic_map_to_occupancy_grid.py  semantic_cell_list_server.py  semantic_map_server.py
python/semanticmap/: __init__.py
src/: semantic_map_grid.cpp
